syntax = "proto3";

message MyResizeArgs {
  int32 width = 1;
  int32 height = 2;
}

message MyImage {
  bytes image_data = 1;
}